Version 2.02 - Fixed spacing issue on small devices with padding, removed css rule and added bootstrap classes for specific screen sizes.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -158,11 +158,6 @@ a:hover {
     text-align: -webkit-center;
 }
 
-.main-paragraph-spacing {
-    padding-right: 50px;
-    padding-left: 50px;
-}
-
 .home-paragraph {
     max-width: 300px;
     margin: auto;
